# ferrobot

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
cpp/: .gitignore  build.gradle
cpp/.wpilib/: wpilib_preferences.json
cpp/src/main/cpp/: Robot.cpp  RobotContainer.cpp  SparkMaxContainer.cpp  ffi.cpp
cpp/src/main/include/: Robot.h  RobotContainer.h  SparkMaxContainer.h  ffi.h
crates/ferrobot/: Cargo.toml
crates/ferrobot-build/: Cargo.toml
crates/ferrobot-build/src/: error.rs  main.rs  paths.rs
crates/ferrobot-builder/: Cargo.toml
crates/ferrobot-builder/src/: args.rs  error.rs  main.rs  paths.rs
crates/ferrobot/src/: context.rs  ffi.rs  lib.rs  prelude.rs
crates/ferrobot/src/control/: event.rs
crates/ferrobot/src/device/: ctx.rs  ffi.rs  mod.rs  prelude.rs
crates/ferrobot/src/device/spark/: config.rs  ffi.rs  mod.rs  prelude.rs
crates/ferrobot/src/event/: mod.rs
crates/robot-build/: Cargo.toml
crates/robot-build/src/: main.rs
crates/robot-ffi/: Cargo.toml
crates/robot-ffi/src/: ffi.rs  lib.rs
src/: bridge.rs  ctx.rs  ffi.rs  lib.rs  robot.rs
xtask/: Cargo.toml
xtask/src/: args.rs  error.rs  main.rs  paths.rs  util.rs
