[package]
name = "ferrobot"
version = "0.1.0"
edition = "2024"

[dependencies]
interoptopus = { git = "https://github.com/onlycs/interoptopus", branch = "cpp-namespaces" }
interoptopus_backend_c = { git = "https://github.com/onlycs/interoptopus", branch = "cpp-namespaces", optional = true }
# interoptopus = { path = "../../../interoptopus/crates/core", optional = true }
# interoptopus_backend_c = { path = "../../../interoptopus/crates/backend_c", optional = true }
async-std = "1.13.1"
thiserror = { git = "https://github.com/onlycs/thiserror", version = "2.0.11" }
typed-builder = "0.21.0"
log = "0.4.27"
uom = { version = "0.36.0", features = [
    "autoconvert",
    "si",
    "std",
    "f64",
], default-features = false }
libc = "0.2.172"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
build = ["dep:interoptopus_backend_c"]
